fix way too small font size in footer of work page

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -146,7 +146,7 @@ header {
 
     &--center {
       text-align: center;
-      font-size: .5em;
+      font-size: 1rem;
     }
   }
 
